# linux_sel4_manual

./: .gitignore  README.md  easy-settings.cmake  manifest.txt
diffs/: kernel  seL4_libs  sel4runtime
projects/sel4arm-vmm/: CMakeLists.txt  easy-settings.cmake  settings.cmake
projects/sel4arm-vmm/apps/Arm/vm_minimal/: CMakeLists.txt  main.c  settings.cmake
projects/sel4arm-vmm/apps/Arm/vm_minimal/qemu-arm-virt/: vmconf.c  vmconf.h
projects/vm-images/linux/: Findvm-images.cmake
tools/: cmake-tool  seL4
tools/batch-git-modules/: diff.sh  fetch.sh
tools/linux/: README.md  build-linux.sh  linux-helpers.sh
